--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/Dash.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/Dash.html.twig
@@ -18,11 +18,11 @@
       <p>Nous sommes désolés, suite à une erreur interne votre requête n'as pu aboutir.</p>
     {% endif %}
   {% endif %}
-  
+
   {% if mariage is not defined %}
     {% set mariage = false %}
   {% endif %}
-  
+
   <h3> Récapitulatif de votre mariage : </h3>
   <div class="tabbable custom-tabs">
   <ul class="nav nav-tabs">
@@ -34,7 +34,7 @@
     <li{% if not mariage %} class="disabled"{% endif %}><a {% if mariage %}data-toggle="tab"{% endif %} href="#DJ">DJ</a></li>
   </ul>
 
-    
+
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
       {% if mariage != false %}
@@ -48,7 +48,7 @@
         <div class="tab right-side">
           <h3>Résumé budgétaire </h3>
           <p> Budget du mariage : {{ mariage.budget }} €</p>
-  
+
           {% if mariage.budgetSalle %}
             <p> Budget pour la salle : {{ mariage.budgetSalle }} €</p>
           {% endif %}
@@ -96,7 +96,7 @@
       <div class="tab left-side">
         <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Salle'}) }}" class="btn btn-primary btn-primary">Voir les salles disponibles<span class="glyphicon glyphicon-list"></span></a>
         {% if mariage and mariage.budgetSalle %}
-          <p> Budget pour la salle : {{ mariage.budgetSalle }}</p>
+          <p> Budget pour la salle : {{ mariage.budgetSalle }} €</p>
         {% endif %}
       </div>
       <div class="tab right-side">
@@ -123,7 +123,7 @@
       <div class="tab left-side">
         <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Traiteur'}) }}" class="btn btn-primary btn-primary">Voir les traiteurs disponibles <span class="glyphicon glyphicon-list"></span></a>
         {% if mariage and mariage.budgetTraiteur %}
-          <p> Budget pour le traiteur : {{ mariage.budgetTraiteur }}</p>
+          <p> Budget pour le traiteur : {{ mariage.budgetTraiteur }} €</p>
         {% endif %}
       </div>
       <div class="tab right-side">
@@ -134,7 +134,7 @@
               <h4> {{ class(service) }} à {{ service.ville }}</h4>
               <p>Description : {{ service.description }}</p>
               <p>Adresse : {{ service.adresse }}</p>
-              <p>Prix : {{ service.prix }}</p>
+              <p>Prix : {{ service.prix }} €</p>
               {% if service.capacite is defined %}
                 <p>Capacite : {{ service.capacite }}</p>
               {% endif %}
@@ -151,7 +151,7 @@
       <div class="tab left-side">
         <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Photographe'}) }}" class="btn btn-primary btn-primary">Voir les photographes disponibles <span class="glyphicon glyphicon-list"></span></a>
         {% if mariage and mariage.budgetPhotographe %}
-          <p> Budget pour le photographe : {{ mariage.budgetPhotographe }}</p>
+          <p> Budget pour le photographe : {{ mariage.budgetPhotographe }} €</p>
         {% endif %}
       </div>
       <div class="tab right-side">
@@ -179,7 +179,7 @@
       <div class="tab left-side">
         <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'DJ'}) }}" class="btn btn-primary btn-primary">Voir les DJ disponibles <span class="glyphicon glyphicon-list"></span></a>
         {% if mariage and mariage.budgetDJ %}
-          <p> Budget pour le DJ : {{ mariage.budgetDJ }}</p>
+          <p> Budget pour le DJ : {{ mariage.budgetDJ }} €</p>
         {% endif %}
       </div>
       <div class="tab right-side">
@@ -190,7 +190,7 @@
               <h4> {{ class(service) }} à {{ service.ville }}</h4>
               <p>Description : {{ service.description }}</p>
               <p>Adresse : {{ service.adresse }}</p>
-              <p>Prix : {{ service.prix }}</p>
+              <p>Prix : {{ service.prix }} €</p>
               {% if service.capacite is defined %}
                 <p>Capacite : {{ service.capacite }}</p>
               {% endif %}
@@ -201,10 +201,10 @@
       </div>
     </div>
 
-    
+
   </div>
   </div>
-  
+
   {% if mariage %}
     <a class="btn btn-primary btn-danger" href="{{ path('iut_nuptias_delete_mariage', {'id': mariage.id }) }}">Supprimer le mariage <span class="glyphicon glyphicon-trash"></span></a>
     <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_edit_mariage', {'id': mariage.id }) }}">Modifier le mariage <span class="glyphicon glyphicon-cog"></span></a>
@@ -218,9 +218,9 @@
   <script src="https://www.amcharts.com/lib/3/pie.js"></script>
   <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
   <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
-  
+
   <script>
-    
+
     var chart = AmCharts.makeChart( "chartdiv", {
       "type": "pie",
       "theme": "light",
@@ -248,5 +248,5 @@
     } );
   </script>
   {% endif %}
-  
+
 {% endblock %}
