--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
@@ -11,23 +11,7 @@
 {% endblock %}
 
 {% block body %}
-  <h1><img src="{{asset('public/images/Logo.png')}}" alt="Logo" width="100" height="100">Organiser votre mariage</h1>
-  <h4>Gérer vos invités, votre budget et vos prestataires en quelques clics</h4>
-
-  <!--<p>
-    Pour vous faciliter la vie, nous vous proposons un site qui vous permet
-    de facilement organiser votre mariage.
-    En vous inscrivant vous pourrez gratuitement :
-      <ul><li>Gérer efficacement votre carnet d'adresse pour la fête de votre mariage,
-      envoyer en un clic une invitation à vos invités et recevez instantanément leurs réponses.</li>
-          <li>Gérer votre budget ...</li>
-          <li>Trouver rapidement : <ul><li> une salle</li>
-                                       <li> un traiteur</li>
-                                       <li> un DJ </li></ul>
-
-      </ul>
-  </p>
-
-  <a href="{{ path('iut_nuptias_accueil') }}">De plus des packs ... </a> -->
+  <h1><img src="{{asset('public/images/Logo.png')}}" alt="Logo" width="100" height="100">Organisez votre fête de mariage</h1>
+  <h4>Gérez vos invités, votre budget et vos prestataires en quelques clics</h4>
 
 {% endblock %}
