--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/Invites.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/Invites.html.twig
@@ -39,8 +39,8 @@
 
     <div id="list_de_trucs" class="table-responsive">
       {{ form_start(form) }}
-      <table class="table table-striped table-hover">
-        <thead style="background-color:lightgrey">
+      <table class="table table-hover">
+        <thead style="background-color:rgb(62,182,24)">
           <tr>
             <th>Nom</th>
             <th>Mail</th>
