--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/Invites.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/Invites.html.twig
@@ -93,8 +93,8 @@
   {% else %}
     <div class="row">
       <div id="list_de_trucs" class="table-responsive">
-        <table class="table table-striped">
-          <thead>
+        <table class="table">
+          <thead style="background-color:rgb(62,182,24)">
             <tr>
               <th>Nom</th>
               <th>Mail</th>
