--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/afficheServices.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/afficheServices.html.twig
@@ -17,7 +17,7 @@
       {% if service.capacite is defined %}
         <p>Capacite : {{ service.capacite }}</p>
       {% endif %}
-      <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_add_service_client', {'id_service': service.id, 'type': class(service)}) }}">Choisir</a>
+      <a class="btn btn-primary btn-primary" href="{{ path('iut_nuptias_add_service_client', {'id_service': service.id, 'type': class(service)}) }}">Choisir</a>
     </div>
   {% endfor %}
 
