--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig
@@ -15,7 +15,7 @@
     <p class="description-pack">Vous avez déjà une vision d'ensemble sur votre mariage et n'avez pas besoin d'être totalement guidé.
       Vous voulez garder un certain degré de liberté. Dans ce cas le pack sur mesure est fait pour vous.
       <hr> Ce pack n'inclut par défaut aucun prestataire.</p>
-      <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_mariage', {'pack': 'DIY'}) }} ">Commencer</a>
+      <a class="btn btn-primary btn-primary" href="{{ path('iut_nuptias_mariage', {'pack': 'DIY'}) }} ">Commencer</a>
   </div>
 
   <div class="col-md-4">
@@ -23,7 +23,7 @@
     <p class="description-pack">Vous avez quelques idées à propos des éléments indispensables à votre mariage.
       Vous voulez simplement pouvoir rapidement sélectionner les prestataires que vous estimez utiles à votre mariage.
       Choisissez le pack Classique. <hr> Ce pack inclut des informations pour être prestataire (Salle, Traiteur)</p>
-    <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_mariage', {'pack': 'classique'}) }} ">Commencer</a>
+    <a class="btn btn-primary btn-primary" href="{{ path('iut_nuptias_mariage', {'pack': 'classique'}) }} ">Commencer</a>
  </div>
 
   <div class="col-md-4">
@@ -32,7 +32,7 @@
       Vous voulez que tout soit parfait et vous avez besoin d'aide.
       Ne vous inquiétez plus en choisissant le pack Tout-En-Un. <hr>
       Ce pack inclut un guide vers tous les prestataires primordiaux à l'organisation de votre mariage.</p>
-    <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_mariage', {'pack': 'All'}) }} ">Commencer</a>
+    <a class="btn btn-primary btn-primary" href="{{ path('iut_nuptias_mariage', {'pack': 'All'}) }} ">Commencer</a>
   </div>
 
   </div>
